preventing plugins version field from overflow

--- a/bin/public/style/main.css
+++ b/bin/public/style/main.css
@@ -119,6 +119,11 @@ h6 {
   margin-left: 0;
   margin-right: 0;
 }
+.home-page .plugin_version {
+  max-width: 100px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
 .menu-panel {
   width: 250px;
   box-shadow: inset 0 0 10px #000000;
