--- a/public/style/homepage.less
+++ b/public/style/homepage.less
@@ -30,5 +30,10 @@
 		margin-left: 0;
  		margin-right:0;
  	}
+ 	.plugin_version{
+		max-width: 100px;
+		overflow: hidden;
+		text-overflow: ellipsis;
+ 	}
 }
 
